[fix] Fixed some bugs

--- a/mongo-test.ipynb
+++ b/mongo-test.ipynb
@@ -162,11 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('5d9fa752d2840d3bb3dfff73'), 'product_type': 'sock', 'name': 'Standard Hawaii Sock', 'pic_path': '/static/standard_hawaii_sock.jpg', 'price': 25, 'reviews_id': 456, 'description': 'Your go-to sock when travelling to the tropics', 'inventory': 49}\n"
+     ]
+    }
+   ],
    "source": [
-    "for row in products.find({'_id': ObjectId('5d9fa4d0c63de1d2ba88c3d3')}):\n",
+    "for row in products.find({'_id': ObjectId('5d9fa752d2840d3bb3dfff73')}):\n",
     "    print(row)"
    ]
   },
